chore(scripts): update scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,8 +49,8 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     // experimental
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
