--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   },
   "homepage": "https://github.com/DevinDon/rester-queue",
   "dependencies": {
+    "@rester/logger": "^0.2.1",
     "ioredis": "^4.26.0",
     "uuid": "^8.3.2"
   }
