--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rester/queue",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "description": "Rester Delay Queue.",
   "main": "dist/bundle.js",
   "directories": {
@@ -32,7 +32,7 @@
   ],
   "author": "IInfinity <i.inf@outlook.com> (https://blog.don.red/)",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "@types/ioredis": "^4.22.3",
     "@types/jasmine": "3.6.9",
