--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "start": "npm run start:dev",
     "start:dev": "MODE=DEV ./scripts/start.sh",
     "start:prod": "MODE=PROD ./scripts/start.sh",
+    "prepublishOnly": "npm run clean && npm run build",
+    "postpublish": "sleep 1 && curl https://npm.taobao.org/sync/@rester/queue",
     "test": "./scripts/test.sh",
     "watch": "tsc -w"
   },
